@@ -34,6 +34,7 @@ if(ascale==''){ascale="1.0";}
 if(_use_mipmaps==''){_use_mipmaps=1;}
 if(_downscale_huge_at_load==''){_downscale_huge_at_load=1;}
 if(_scroll_skip_page_fraction==''){_scroll_skip_page_fraction=0;}
+if(_want_wm_mouse_ctrl==''){_want_wm_mouse_ctrl=1;}
 #
 # External variables (not used internally).
 if(allow_round_scroll==''){allow_round_scroll=0;}
