@@ -49,6 +49,7 @@ fim_var_help_db[FIM_VID_PAGES]= "[out,experimental,i:] the current number of pag
 fim_var_help_db[FIM_VID_OVERRIDE_DISPLAY]= "[internal,g:] if 1, will inhibit display" ;
 fim_var_help_db[FIM_VID_MAX_ITERATED_COMMANDS]= "[g:] the iteration limit for N in \"N[commandname]\" iterated command invocations" ;
 fim_var_help_db[FIM_VID_WANT_CAPTION_STATUS]= "[in,g:] this works only if supported by the display device (currently only SDL). if set to a number that is not 0, will show the status (or command) line in the window manager caption; if set to a non-empty string, will interpret it just as a file info format string (see _info_fmt_str); if empty, will show the program version." ;
+fim_var_help_db[FIM_VID_WANT_MOUSE_CTRL]= "[in,g:] if set to 1, enable mouse click/movement behaviour when in SDL mode." ;
 fim_var_help_db[FIM_VID_MAGNIFY_FACTOR]= "[in,g:] the image scale multiplier used when magnifying images size" ;
 fim_var_help_db[FIM_VID_PWD]= "[out,g:] the current working directory; will be updated at startup and whenever the working directory changes" ;
 fim_var_help_db[FIM_VID_REDUCE_FACTOR]= "[in,g:] the image scale multiplier used when reducing images size" ;
